# geo-monitor

./: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml
data/: job_config.schema.json
docs/: intelligence.md  metrics.md  providers.md
examples/: job_config.example.json  seed_prompts.example.yaml
src/geo_monitor/: __init__.py  api.py  brand_extraction.py  cli.py  config.py  dashboard.py  dataset.py  db.py  exporters.py  fanout.py  filesystem.py  job.py  job_analysis.py  llm_client.py  mock_client.py  query_meta.py  report_builder.py  report_model.py  reporting.py  request_fingerprint.py  resilience.py  response_parser.py  runner.py  schemas.py  tool.py
src/geo_monitor/adapters/: __init__.py  base.py  deepseek_chat.py  doubao_responses.py  openai_responses.py  qwen_chat.py  qwen_dashscope.py  qwen_responses.py  registry.py
src/geo_monitor/analysis/: __init__.py  aggregates.py  artifact_commit.py  artifacts.py  brand_metrics.py  cache.py  contracts.py  denominator_facts.py  extraction.py  fact_utils.py  history.py  metrics.py  orchestrator.py  pipeline.py  quality.py  source_metrics.py
src/geo_monitor/analysis/intelligence/: __init__.py  citation.py  common.py  competitor.py  opportunities.py  orchestration.py  overview.py  perception.py  recommendation.py  situation.py  trends.py
src/geo_monitor/data/: job_config.schema.json
src/geo_monitor/docs/: README.zh-CN.md  metrics.md
src/geo_monitor/duckdb_store/: __init__.py  attempts.py  contracts.py  ingest.py  query.py  results.py  schema.py
src/geo_monitor/examples/: job_config.example.json  persona_templates.example.yaml
src/geo_monitor/jobs/: __init__.py  bundle_files.py  cleanup.py  config.py  contracts.py  layout.py  locking.py  manifest.py  profiles.py  query_manifest.py  runtime.py
src/geo_monitor/providers/: __init__.py  base.py  deepseek.py  doubao.py  openai_compatible.py  qwen.py  registry.py
src/geo_monitor/renderers/: __init__.py  html.py  markdown.py  pdf.py
tests/: test_adapter_profiles.py  test_adversarial_boundaries.py  test_analysis_artifact_commit.py  test_api.py  test_architecture.py  test_brand_extraction.py  test_cli.py  test_config.py  test_dataset.py  test_db_layering.py  test_duckdb_security.py  test_exporters.py  test_fanout.py  test_input_hardening.py  test_intelligence_competitor_citation.py  test_intelligence_orchestration.py  test_intelligence_overview_recommendation.py  test_intelligence_situation_perception.py  test_intelligence_trends_opportunities.py  test_job_workflow.py  test_llm_client.py  test_manifest_integrity.py  test_package_resources.py  test_provider_backends.py  test_repeat_runner.py  test_reporting.py  test_resilience.py  test_response_parser.py  test_runtime_reliability.py  test_study_workspace_contracts.py  verify_distribution.py
tests/fixtures/: llm_response_with_sources.json  queries.small.csv
