[project]
name = "geo-monitor"
version = "0.1.0"
description = "OpenAI-compatible Responses API GEO monitoring MVP"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "ccchenhuohuo" },
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "openai>=1.60.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.0",
  "python-dotenv>=1.0.0",
  "typer>=0.12.0",
  "rich>=13.7.0",
  "tenacity>=8.2.0",
  "PyYAML>=6.0.0",
  "duckdb>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.0",
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
]

[project.scripts]
geo-monitor = "geo_monitor.cli:app"

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
geo_monitor = [
  "data/*.json",
  "examples/*.json",
  "examples/*.yaml",
  "docs/*.md",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
