[project]
name = "geo-monitor"
version = "0.3.0"
description = "Audit-first GEO analysis and report engine with native provider SDK boundaries"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "ccchenhuohuo" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
  "openai>=1.66.0,<3",
  "pydantic>=2.7.0,<3",
  "pydantic-settings>=2.2.0,<3",
  "python-dotenv>=1.0.0",
  "typer>=0.12.0,<1",
  "rich>=13.7.0",
  "tenacity>=8.2.0",
  "PyYAML>=6.0.0",
  "reportlab>=4.2.0,<5",
]

[project.urls]
Homepage = "https://github.com/ccchenhuohuo/geo-monitor"
Repository = "https://github.com/ccchenhuohuo/geo-monitor"
Issues = "https://github.com/ccchenhuohuo/geo-monitor/issues"

[project.optional-dependencies]
duckdb = [
  "duckdb>=1.0.0,<2",
]
doubao = [
  "volcengine-python-sdk[ark]>=5.0.40,<6",
]
qwen = [
  "dashscope>=1.26.3,<2",
]
providers-all = [
  "dashscope>=1.26.3,<2",
  "volcengine-python-sdk[ark]>=5.0.40,<6",
]
dev = [
  "build>=1.2.0,<2",
  "pytest>=8.0.0,<10",
  "pytest-cov>=5.0.0,<8",
  "pip-audit>=2.7.0,<3",
  "ruff>=0.9.0,<1",
]
[project.scripts]
geo-monitor = "geo_monitor.cli:app"

[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.ruff]
target-version = "py311"
line-length = 160

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
